separated code into logical blocks

--- a/client_module/main/CMakeLists.txt
+++ b/client_module/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "text_decode_utils.c" "main.cpp"
+idf_component_register(SRCS "battery.c" "display.cpp" "wifi.c" "main.cpp" "text_decode_utils.c"
                     INCLUDE_DIRS ".")
